# ffx-autosplitter

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
src/: enum_set.rs  lib.rs
